# map_tiles_projects

./: ESP32-S3-LC76G-I2C.ino  LICENSE  README.md  quectel_i2c_example.c  quectel_lc76g_i2c_example.c
01.Simple_Map/: CMakeLists.txt  README.md
01.Simple_Map/3d_printing/: ESP32-S3-Touch-Amoled-1_75_BackCover_v4.stl  ESP32-S3-Touch-Amoled-1_75_Buttons_v6.stl  ESP32-S3-Touch-Amoled-1_75_Housing_v6.stl
01.Simple_Map/espressif_esp32_p4_function_ev_board/: CMakeLists.txt  sdkconfig
01.Simple_Map/espressif_esp32_p4_function_ev_board/main/: CMakeLists.txt  idf_component.yml  main.cpp
01.Simple_Map/shared_components/battery_monitor/: CMakeLists.txt  battery_monitor.cpp  battery_monitor.h
01.Simple_Map/shared_components/gps_lc76g/: CMakeLists.txt  gps_lc76g.c  gps_lc76g.h  gps_lc76g_i2c.c  gps_lc76g_i2c.h
01.Simple_Map/shared_components/gps_lc76g_uart/: CMakeLists.txt  gps_lc76g_uart.c  gps_lc76g_uart.h  gpx_replay.c  gpx_replay.h
01.Simple_Map/shared_components/simple_map/: CMakeLists.txt  simple_map.cpp  simple_map.hpp
01.Simple_Map/waveshare_esp32_p4_wifi6_touch_lcd_xc/: CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
01.Simple_Map/waveshare_esp32_p4_wifi6_touch_lcd_xc/components/bsp_extra/: idf_component.yml
01.Simple_Map/waveshare_esp32_p4_wifi6_touch_lcd_xc/main/: CMakeLists.txt  idf_component.yml  main.cpp
01.Simple_Map/waveshare_esp32_s3_touch_amoled_1_75/: CMakeLists.txt  sdkconfig  sdkconfig.old
01.Simple_Map/waveshare_esp32_s3_touch_amoled_1_75/components/esp32_s3_touch_amoled_1_75/: .component_hash  CHECKSUMS.json  esp32_s3_touch_amoled_1_75.c  idf_component.yml
01.Simple_Map/waveshare_esp32_s3_touch_amoled_1_75/components/esp32_s3_touch_amoled_1_75/include/bsp/: esp32_s3_touch_amoled_1_75.h
01.Simple_Map/waveshare_esp32_s3_touch_amoled_1_75/docs/: FSD.md
01.Simple_Map/waveshare_esp32_s3_touch_amoled_1_75/main/: CMakeLists.txt  idf_component.yml  main.cpp
01.Simple_Map/waveshare_esp32_s3_touch_lcd_3_5b/: CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
01.Simple_Map/waveshare_esp32_s3_touch_lcd_3_5b/components/battery_monitor/: CMakeLists.txt  battery_monitor.cpp
01.Simple_Map/waveshare_esp32_s3_touch_lcd_3_5b/components/esp32_s3_touch_lcd_3_5b/: CMakeLists.txt  Kconfig  LICENSE  esp32_s3_touch_lcd_3_5b.c  idf_component.yml
01.Simple_Map/waveshare_esp32_s3_touch_lcd_3_5b/components/esp32_s3_touch_lcd_3_5b/priv_include/: bsp_err_check.h
01.Simple_Map/waveshare_esp32_s3_touch_lcd_3_5b/docs/: FSD.md
01.Simple_Map/waveshare_esp32_s3_touch_lcd_3_5b/main/: CMakeLists.txt  idf_component.yml  main.cpp
02.ESP32-S3_Map_LoRa_GPS/: CMakeLists.txt  README.md  sdkconfig  sdkconfig.defaults  sdkconfig.old
02.ESP32-S3_Map_LoRa_GPS/components/adc_bsp/: CMakeLists.txt  adc_bsp.c  adc_bsp.h
02.ESP32-S3_Map_LoRa_GPS/components/audio_bsp/: CMakeLists.txt  TF022.pcm  user_audio_bsp.c  user_audio_bsp.h
02.ESP32-S3_Map_LoRa_GPS/components/button_bsp/: button_bsp.c  button_bsp.h
02.ESP32-S3_Map_LoRa_GPS/components/codec_board/: board_cfg.txt
02.ESP32-S3_Map_LoRa_GPS/components/i2c_bsp/: i2c_bsp.c  i2c_bsp.h
02.ESP32-S3_Map_LoRa_GPS/components/lcd_bl_pwm_bsp/: lcd_bl_pwm_bsp.c  lcd_bl_pwm_bsp.h
02.ESP32-S3_Map_LoRa_GPS/components/sdcard_bsp/: sdcard_bsp.c  sdcard_bsp.h
02.ESP32-S3_Map_LoRa_GPS/docs/: FSD.md
02.ESP32-S3_Map_LoRa_GPS/main/: CMakeLists.txt  device_config.c  device_config.h  gps_lc76g.c  gps_lc76g.h  icon_kid.c  icon_mom.c  idf_component.yml  lora_rylr998.c  lora_rylr998.h  main.cpp  user_config.h  user_map.cpp  user_map.hpp
(+4 files in other folders)
